# rainbowrogue

./: .gitignore  AGENTS.md  Cargo.toml  README.md  ROADMAP.md
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.meta.json
history/: 2025-11-10-scaffold-notes.md
src/: main.rs  scripted_input.rs
src/ai/: mod.rs
src/data/: items.rs  mod.rs  monsters.rs
src/ecs/: components.rs  mod.rs  resources.rs  systems.rs
src/map/: mod.rs
src/render/: mod.rs
test-scripts/: test01.txt
